Added html elements and created my css file
added a button for throwing and labels for rock, paper, or scissors

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 
+    <button id="myButon">Throw</button>
+    <label id="hand1"></label>
+    <label id="hand2"></label>
+    <label id="hand3"></label>
 
     <script src="index.js"></script>
 </body>
