Setup javacript structure
added const variables linking to the html and let variables used in the random number generator, tested one variable and works.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <button id="myButon">Throw</button>
+    <button id="myButton">Throw</button>
     <label id="hand1"></label>
     <label id="hand2"></label>
     <label id="hand3"></label>
