--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 
-    <button id="myButton">Throw</button>
-    <label id="hand1"></label>
-    <label id="hand2"></label>
-    <label id="hand3"></label>
+    <button id="myButton">Throw</button><br>
+    <label id="hand1"></label><br>
+    <label id="hand2"></label><br>
+    <label id="hand3"></label><br>
 
     <script src="index.js"></script>
 </body>
