Updated index and Java for Human Choice
Updated some variable labeling, and figured out how to make the prompt() method to work

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 <body>
 
     <button id="myButton">Throw</button><br>
-    <label id="hand1"></label><br>
-    <label id="hand2"></label><br>
-    <label id="hand3"></label><br>
+    <label id="computerHand"></label>
+    <label id="humanHand"></label><br>
 
     <script src="index.js"></script>
 </body>
