--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
     <button id="myButton">Throw</button><br>
     <label id="computerHand"></label>
-    <label id="humanHand"></label><br>
+    <label id="computerCount">0</label>
+    <label id="humanHand"></label>
+    <label id="humanCount">0</label>
+
 
     <script src="index.js"></script>
 </body>
